@@ -7,7 +7,9 @@
 extern Cell memory[];
 
 void set_initial_state(void);
+void set_trace_count(unsigned value);
 void print_CPU_state(void);
+void print_DUMP(void);
 void run(void);
 Cell memory_fetch(Address address);                 /* fetch memory from address, range checked */
 void memory_store(Address address, Cell cell);      /* store cell at address, range checked */
